--- a/src/styles/features/index.scss
+++ b/src/styles/features/index.scss
@@ -1,7 +1,7 @@
 @import './contact';
 @import './solution';
 @import './service';
-@import './serviceB2bTwo';
+@import './serviceLogistics';
 @import './serviceCenter';
 @import './serviceProcess';
 @import './serviceProblem';
